# mask-generation-tool

./: .clinerules  .gitignore  README.md  checklist.md  execution_output.txt  lessons_learned.md  mask_generator_plan.md  mask_generator_ui_plan.md  out.txt  phase1_implementation_summary.md  run_and_capture_tests.sh  ui_implementation_plan.md
backend/: HOW_TO_RUN_TESTS.md  README.md  conftest.py  db.sqlite3  manage.py  pyproject.toml  remove_entries_from_db.py  requirements.txt  run_tests.py  run_tests.sh
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_image_metadata_json.py  0003_alter_image_file_alter_mask_file.py
backend/api/tests/: __init__.py
backend/api/tests/image_processing/: __init__.py  test_mpo_conversion.py
backend/api/tests/models/: test_image.py  test_mask.py
backend/api/tests/utils/: __init__.py  test_file_storage.py
backend/api/tests/views/: test_image_list.py  test_image_retrieve.py  test_image_upload.py  test_mask_endpoints.py  test_mask_save.py
backend/api/utils/: file_storage.py  image_processing.py
backend/mask_generator/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  cypress.config.js  package-lock.json  package.json  vitest.config.js
frontend/cypress/e2e/: mask_creation.cy.js
frontend/cypress/fixtures/: test.txt
frontend/src/: App.jsx
frontend/src/__tests__/: App.test.jsx  (+1 more)
handoffs/: 1-ui-layout-restructuring.md  2-visual-design-system.md  3-mask-drawing-refinement.md  4-mask-drawing-refinement-implementation.md  5-folder-upload-implementation.md
(+46 files in other folders)
